# TryReactPy

./: .copier-answers.yml  README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
src/TryReactPy/: cli.py  main.py
tests/: test_cli.py  test_main.py
